# nice-sound-looper

./: .flake8  .gitignore  README.md  TODO  a.bat  config.json  const.py  gui.py  gui_lib.py  looper.kv  main.py  player.py  pyproject.toml  recorder.py  setup.py
autosaves/: README
src/: const.py  gui.py  looper.kv  player.py  recorder.py
