[tool.poetry]
name = "nice sound looper"
version = "0.1.0"
description = "GUI for recording and looping sounds"
authors = ["Krzysztof Bodora <krzysztof.bodora@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
opencv-python = "^4.6.0"
Kivy = "^2.1.0"
llvmlite = "^0.38.1"
numba = "^0.55.2"
librosa = "^0.9.2"
SoundFile = "^0.10.3"
sounddevice = "^0.4.4"
noisereduce = "^2.0.1"
matplotlib = "^3.5.2"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
vulture = "^2.5"
ipython = "^8.4.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
